added the link to the image-slider app

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 like loops, conditionals, and data structures. It’s a great way
                 to reinforce your understanding of these fundamental principle
               </p>
-              <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+              <a href=""><i class="fa-solid fa-up-right-from-square"></i></a>
             </div>
           </div>
           <div class="work">
@@ -197,7 +197,9 @@
                 of a sliding image on the screen and also to pratice more on the
                 usage of the React frame work
               </p>
-              <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+              <a href="https://image-slider-1.onrender.com/"
+                ><i class="fa-solid fa-up-right-from-square"></i
+              ></a>
             </div>
           </div>
         </div>
@@ -211,7 +213,9 @@
         <div class="row">
           <div class="contact-left">
             <h1 class="sub-title">Contact Me</h1>
-            <p><i class="fa-solid fa-paper-plane"></i>felixNkrumah@gmail.com</p>
+            <p>
+              <i class="fa-solid fa-paper-plane"></i>felixNkrumah567@gmail.com
+            </p>
             <p><i class="fa-sharp fa-solid fa-square-phone"></i>0503143448</p>
             <div class="social-icons">
               <a href="#"><i class="fa-brands fa-facebook"></i></a>
