changed the first work image

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <h1 class="sub-title">My Work</h1>
         <div class="work-list">
           <div class="work">
-            <img src="images/tic-tac-toe.webp" alt="" />
+            <img src="images/work-1.png" alt="" />
             <div class="layer">
               <h3>TIC TAC TOE</h3>
               <p>
@@ -184,7 +184,9 @@
                 functionality is to load products on the web page. It created
                 using REST Api
               </p>
-              <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+              <a href="https://load-products-1.onrender.com/"
+                ><i class="fa-solid fa-up-right-from-square"></i
+              ></a>
             </div>
           </div>
 
