changed the tic tac toe to go mobile app

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
           <div class="work">
             <img src="images/work-1.png" alt="" />
             <div class="layer">
-              <h3>TIC TAC TOE</h3>
+              <h3>GO MOBILE APP</h3>
               <p>
                 A fun game that nurishes the mind and keeps you on your toes.
                 Building a tic-tac-toe game involves key programming concepts
